@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: forward.h,v 1.2.2.1 2004/03/09 06:11:16 marka Exp $ */
+/* $Id: forward.h,v 1.2.2.2 2005/03/16 03:51:24 marka Exp $ */
 
 #ifndef DNS_FORWARD_H
 #define DNS_FORWARD_H 1
@@ -67,6 +67,10 @@ dns_fwdtable_add(dns_fwdtable_t *fwdtable, dns_name_t *name,
 isc_result_t
 dns_fwdtable_find(dns_fwdtable_t *fwdtable, dns_name_t *name,
 		  dns_forwarders_t **forwardersp);
+
+isc_result_t
+dns_fwdtable_find2(dns_fwdtable_t *fwdtable, dns_name_t *name,
+		   dns_name_t *foundname, dns_forwarders_t **forwardersp);
 /*
  * Finds a domain in the forwarding table.  The closest matching parent
  * domain is returned.
@@ -75,6 +79,7 @@ dns_fwdtable_find(dns_fwdtable_t *fwdtable, dns_name_t *name,
  * 	fwdtable is a valid forwarding table.
  * 	name is a valid name
  * 	forwardersp != NULL && *forwardersp == NULL
+ *	foundname to be NULL or a valid name with buffer.
  *
  * Returns:
  * 	ISC_R_SUCCESS
